examples/exploit-example/klee-out-0/messages.txt
KLEE: Using STP solver backend
KLEE: ERROR: test.cc:26: memory error: out of bound pointer
KLEE: NOTE: now ignoring this error at this location
KLEE: ERROR: test.cc:31: memory error: out of bound pointer
KLEE: NOTE: now ignoring this error at this location
